@@ -1,3 +1,9 @@
+2005-11-10  Sankar P  <psankar@novell.com>
+
+	* evolution-mail-message.xml: added keyboard accelerators for 
+	NextMessage and PreviousMessage.
+	Fixes #302974
+
 2005-10-19 Harish Krishnaswamy <kharish@novell.com>
 
 	Committing for Nathan Owens <pianocomp81@yahoo.com>
